[gd_scene load_steps=3 format=3 uid="uid://4apy4wtf30mn"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_wqviy"]
[ext_resource type="Script" path="res://scripts/database.gd" id="2_e5nfg"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqviy")

[node name="Database" type="Node" parent="."]
script = ExtResource("2_e5nfg")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 38.0
text = "This is a test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CreateTable" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 64.0
offset_right = 149.0
offset_bottom = 95.0
text = "create table
"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 221.0
offset_top = 48.0
offset_right = 410.0
offset_bottom = 123.0

[node name="AddTable" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 263.0
offset_right = 149.0
offset_bottom = 294.0
text = "add row
"

[node name="MainText" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 221.0
offset_top = 247.0
offset_right = 410.0
offset_bottom = 322.0

[node name="OptionalText" type="TextEdit" parent="."]
offset_left = 500.0
offset_top = 247.0
offset_right = 689.0
offset_bottom = 322.0

[node name="DeleteData" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 443.0
offset_right = 149.0
offset_bottom = 474.0
text = "delete row
"

[node name="DeleteIdInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 221.0
offset_top = 427.0
offset_right = 410.0
offset_bottom = 502.0

[node name="TableLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 48.0
offset_right = 883.0
offset_bottom = 386.0
